# quartz

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  readme.md
DockerFiles/: build_containers.sh  chrony.conf  readme.md
DockerFiles/coordination-service/: Dockerfile
DockerFiles/dev-image/: Dockerfile  build.sh  chrony.conf  chrony_centos.conf  chrony_swts.conf  run.sh  run_priveleged_host.sh  run_priveleged_host_bbb.sh
DockerFiles/dev-image/rpi-headerslibs/include/linux/: coda.h  version.h
DockerFiles/dev-image/rpi-headerslibs/include/net/: if_ppp.h
DockerFiles/dev-image/rpi-headerslibs/lib/: libX11.so.6  libapt-pkg.so.5.0  libapt-private.so.0.0  libarchive.so.13  libasan.so.2.0.0  libatomic.so.1  libboost_regex.so.1.58.0  libboost_serialization.so.1.58.0  libcc1.so.0.0.0  libcpprest.so.2.8  libcurl-gnutls.so.3  libcurl.so.3  libgmp.so.10  libgnutls.so.30.6.2  libgomp.so.1  libgssapi.so.3.0.0  libgssapi_krb5.so.2  libhogweed.so.4  libicui18n.so.55  libicule.so.55.1  libisl.so.15  libk5crypto.so.3  libkrb5.so.26.0.0  libkrb5.so.3.3  liblber-2.4.so.2  libldap_r-2.4.so.2  libmpdec.so.2.4.2  libnettle.so.6  libperl.so.5.22  libroken.so.18.1.0  librtmp.so.1  libsqlite3.so.0.8.6  libstdc++.so.6  libubsan.so.0.0.0  libwind.so.0  libxml2.so.2.9.3
DockerFiles/extra-dockerfiles/: build_containers.sh
DockerFiles/extra-dockerfiles/python-app-mqtt/: Dockerfile
DockerFiles/extra-dockerfiles/python-mqtt-dummy-actor/: Dockerfile
DockerFiles/extra-dockerfiles/python-mqtt-dummy-sensor/: Dockerfile
DockerFiles/extra-dockerfiles/python-traffic-app-mqtt/: Dockerfile
DockerFiles/extra-dockerfiles/python-transform/: Dockerfile
DockerFiles/kubernetes-yaml/k8s-pod-config/: pod-qot-app-arm-repo.yaml  pod-qot-app-arm.yaml  pod-qot-app.yaml  pod-qot-coord-service.yaml  pod-qot-ecr.yaml  pod-qot-services-arm-repo.yaml  pod-qot-services-arm.yaml  pod-qot-services.yaml  pod-qot.yaml
DockerFiles/kubernetes-yaml/k8s-pod-config-python/: pod-qot.yaml
DockerFiles/kubernetes-yaml/nats-k8s-pod-config/: nats.yaml  nats_nodeport.yaml
DockerFiles/kubernetes-yaml/python-transform-k8s-pod-config/: python-pod.yaml
DockerFiles/kubernetes-yaml/sherlock-june-sprint-demo-k8s/: python-pod-ecr.yaml  python-pod.yaml  python-traffic-ecr.yaml
DockerFiles/kubernetes-yaml/zk-k8s-pod-config/: zk.yaml  zk_nodeport.yaml
DockerFiles/python-app/: Dockerfile
DockerFiles/qot-helloworld-app/: Dockerfile
DockerFiles/sync-service/: Dockerfile  chrony.conf
DockerFiles/timeline-service/: Dockerfile
doc/: k8s-install.md  readme.md  topology_example.json  topology_example_mcast.json
doc/data/: readme.md
src/: CMakeLists.txt  qot_types.h  readme.md
src/api/: CMakeLists.txt
src/api/cpp/: CMakeLists.txt  clkparams_circbuffer.cpp  clkparams_circbuffer.hpp  qot_coreapi.cpp  qot_coreapi.hpp
src/api/python/: CMakeLists.txt  qot_coreapi.py  qot_types.py
src/examples/: CMakeLists.txt
src/examples/cpp/: CMakeLists.txt  helloworld.cpp
src/examples/python/: CMakeLists.txt  helloworld.py  helloworld_app.py  helloworld_mqtt.py  mqtt_dummy_actor.py  mqtt_dummy_sensor.py  sherlock_qot_transform.py  sherlock_qot_transform_traffic.py  traffic_mqtt.py
src/examples/python/lib/: datastream_pb2.py
src/micro-services/: CMakeLists.txt
src/micro-services/coordination-service/: LICENSE.txt  README.md  requirements.txt  setup.py
src/micro-services/coordination-service/coordination_service/: app.py  db.sqlite  settings.py
src/micro-services/coordination-service/coordination_service/api/: restplus.py
src/micro-services/coordination-service/coordination_service/api/coordinator/: business.py  serializers.py
src/micro-services/coordination-service/coordination_service/api/coordinator/endpoints/: sync_servers.py  timelines.py
src/micro-services/coordination-service/coordination_service/database/: __init__.py  models.py
src/micro-services/coordination-service/coordination_service/zookeeper/: __init__.py  nats_pub.py  zk_logic.py
src/micro-services/sync-service/: CMakeLists.in  CMakeListsBBB.txt  qot_clkparams_serialize.cpp  qot_clkparams_serialize.hpp  qot_peer_service.cpp  qot_sync_service.cpp  qot_sync_service.hpp  qot_syncmsg_serialize.cpp  qot_syncmsg_serialize.hpp
src/micro-services/sync-service/sync/: ProbabilityLib.hpp  Sync.cpp  Sync.hpp  SyncUncertainty.cpp  SyncUncertainty.hpp  qot_tlcomm.cpp  qot_tlcomm.hpp
src/micro-services/sync-service/sync/huygens/: CircBuffer.cpp  CircBuffer.hpp  PeerComputeServer.py  PeerTSclient.cpp  PeerTSclient.hpp  PeerTSreceiver.cpp  PeerTSreceiver.hpp  PeerTSserver.cpp  PeerTSserver.hpp  SVMprocessor.cpp  SVMprocessor.hpp  Timestamping.cpp  Timestamping.hpp  ptp_message.cpp  ptp_message.hpp
src/micro-services/sync-service/sync/huygens/libsvm/: svm.cpp
src/micro-services/sync-service/sync/ntp/: NTP18.cpp  NTP18.hpp  global_timeline.h  qot_tlclockops.c  qot_tlclockops.h  uncertainty_data.h
src/micro-services/sync-service/sync/ntp/chrony-3.2/: client_chronyc.c  client_chronyc.h  conf.c  configBBB.h  configure  hwclock.c  local.c  local.h  ntp_core.c  ntp_core.h  ntp_io_linux.c  ntp_sources.c  ntp_sources.h  reference.c  reference.h  sources.c  sources.h  sys_generic.c  sys_linux.c  sys_timex.c
src/micro-services/sync-service/sync/pid/: pid.cpp  pid.hpp
src/micro-services/sync-service/sync/ptp/: PTP.cpp  PTP.hpp  PTP18.cpp  PTP18.hpp  local_timeline.h  qot_tlclockops.c  qot_tlclockops.h  uncertainty_data.h
src/micro-services/sync-service/sync/ptp/linuxptp/: clock.c  qot_types.h
src/micro-services/sync-service/sync/ptp/linuxptp-1.8/: clock.c  clock.h  phc2sys.c  port.c
src/micro-services/timeline-service/: CMakeLists.txt  qot_synccomm.cpp  qot_synccomm.hpp  qot_timeline.cpp  qot_timeline.hpp  qot_timeline_clock.cpp  qot_timeline_clock.hpp  qot_timeline_registry.cpp  qot_timeline_registry.hpp  qot_timeline_rest.cpp  qot_timeline_rest.hpp  qot_timeline_service.cpp  qot_timeline_service.hpp  qot_timeline_subscriber.cpp  qot_timeline_subscriber.hpp  qot_tl_types.hpp  qot_tlmsg_serialize.cpp  qot_tlmsg_serialize.hpp
