# Build the examples using CPP API
OPTION(BUILD_CPP_EXAMPLE "Build CPP Examples" ON)
IF (BUILD_CPP_EXAMPLE)
	ADD_SUBDIRECTORY(cpp)
ENDIF (BUILD_CPP_EXAMPLE)

# Build the examples using CPP Core API
OPTION(INSTALL_PYTHON_EXAMPLE "Install Python Examples" ON)
IF (INSTALL_PYTHON_EXAMPLE)
	ADD_SUBDIRECTORY(python)
ENDIF (INSTALL_PYTHON_EXAMPLE)

